Add proper module-info.java to all modules
Drop Automatic-Module-Name manifest attribute.